# FUSION

./: .gitignore  Cargo.toml  README.md  STRUCTURE.md  config.tmp.alt.json  config.tmp.duo.gemflash.json  config.tmp.duo.json  config.tmp.duo.qwen.json  fusion  fusion-code  fusion.save  install.sh  jarvis  jarvis.py
.github/workflows/: ci.yml  release.yml
chat-cli/cli/: main.py
cli/: main.py
framework/: fusion_core.py  jarvis_core.py
fusion-core/: Cargo.toml
fusion-core/src/: agent.rs  config.rs  error.rs  fusion.rs  lib.rs  prompts.rs
src/: cli.rs  config.rs  fusion.rs  lib.rs  logging.rs  main.rs  onboarding.rs  openrouter.rs  provider.rs  serve.rs  ui.rs
tests/: debate_integration.rs  test_agent_http.py  test_cli_config.py  test_fusion_core.py  test_fusion_orchestration.py
