[package]
name = "fusion-core"
version = "0.1.0"
edition = "2021"
description = "The provider-agnostic FUSION debate engine: several agents answer, critique each other over N rounds, then a synthesizer merges them. Decoupled from any HTTP client via the ChatProvider trait."
license = "MIT"
repository = "https://github.com/teddytennant/FUSION"
keywords = ["llm", "multi-agent", "debate", "fusion", "ai"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "fusion_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"
regex = "1"
async-trait = "0.1"
thiserror = "2"
directories = "5"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util"] }
tempfile = "3"
